--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "playwright-lighthouse": "^4.0.0"
   },
   "scripts": {
-    "lint": "yarn tsc -p tsconfig.json && yarn eslint ."
+    "build": "yarn tsc -p tsconfig.json",
+    "lint": "yarn eslint ."
   },
   "packageManager": "yarn@4.7.0"
 }
