--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -19,12 +19,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           always-auth: true
-          node-version: '22.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "22.x"
+          registry-url: "https://registry.npmjs.org"
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
       - name: Publish version
-        run: yarn publish --new-version ${{ steps.release.outputs.version }} --access public
+        run: yarn npm publish --new-version ${{ steps.release.outputs.version }} --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_api_token }}
