--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "rootDir": "src",
+    "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "skipLibCheck": true,
     "useDefineForClassFields": false,
@@ -15,5 +18,6 @@
     "noEmit": false,
     "outDir": "dist",
   },
-  "include":["**/*.ts"],
+  "include":["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
