--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "engines": {
     "node": ">=20.11.1"
   },
