--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "noEmit": false,
     "outDir": "dist",
   },
-  "include":["src/**/*.ts"],
+  "include":["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
