--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "target": "ES2022",
+    "target": "ESNext",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
+    "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
     "strict": true,
     "skipLibCheck": true,
     "useDefineForClassFields": false,
     "allowJs": true,
-    "noImplicitAny": false,
     "noEmit": false,
-    "outDir": "dist",
   },
   "include":["src/**/*"],
   "exclude": ["node_modules", "dist"]
