--- a/.github/workflows/create_prerelease.yml
+++ b/.github/workflows/create_prerelease.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Extract branch name
         id: branch_name
-        run: echo "export branch_name=${GITHUB_HEAD_REF:-${{ github.event.pull_request.head.ref }}}" >> $GITHUB_ENV
+        run: echo "branch_name=${GITHUB_HEAD_REF:-${{ github.event.pull_request.head.ref }}}" >> $GITHUB_ENV
 
       - name: Create pre-release version
         run: |
