--- a/.github/workflows/create_prerelease.yml
+++ b/.github/workflows/create_prerelease.yml
@@ -24,7 +24,18 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
+      - name: Get version from package.json
+        id: version
+        run: echo "version=$(node -e "import fs from 'fs'; const pkg = JSON.parse(fs.readFileSync('./package.json', 'utf8')); console.log(pkg.version)")" >> "$GITHUB_OUTPUT"
+
       - name: Publish pre-release
-        run: yarn npm publish --tag $(node -e "import fs from 'fs'; const pkg = JSON.parse(fs.readFileSync('./package.json', 'utf8')); console.log(pkg.version)") --access public
+        run: yarn npm publish --tag ${{ steps.version.outputs.version }} --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
+
+      - name: Comment PR with published version
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "🚀 Pre-release version \`${{ steps.version.outputs.version }}\` has been published"
