--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hmcts/playwright-common",
   "description": "Common library for Playwright tests",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "author": "HMCTS",
   "license": "MIT",
   "repository": {
@@ -17,16 +17,14 @@
     "node": ">=20.11.1"
   },
   "type": "module",
-  "devDependencies": {
+  "dependencies": {
     "@eslint/js": "^9.11.1",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "eslint": "^9.11.1",
     "eslint-plugin-playwright": "^1.6.2",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0"
-  },
-  "dependencies": {
+    "typescript-eslint": "^8.8.0",
     "@axe-core/playwright": "^4.10.0",
     "@playwright/test": "^1.48.2",
     "get-port": "^7.1.0",
