--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hmcts/playwright-common",
   "description": "Common library for Playwright tests",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "author": "HMCTS",
   "license": "MIT",
   "repository": {
@@ -20,7 +20,6 @@
   "dependencies": {
     "@axe-core/playwright": "^4.10.0",
     "@eslint/js": "^9.11.1",
-    "@playwright/test": "^1.48.2",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "eslint": "^9.11.1",
@@ -28,11 +27,14 @@
     "get-port": "^7.1.0",
     "globals": "^15.10.0",
     "lighthouse": "^12.2.1",
-    "playwright": "^1.48.2",
-    "playwright-core": "^1.48.2",
     "playwright-lighthouse": "^4.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
+  },
+  "peerDependencies": {
+    "@playwright/test": "^1.49.0",
+    "playwright": "^1.49.0",
+    "playwright-core": "^1.49.0"
   },
   "scripts": {
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
