--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "get-port": "^7.1.0",
     "globals": "^15.10.0",
     "lighthouse": "^12.2.1",
+    "playwright": "^1.49.0",
+    "playwright-core": "^1.49.0",
     "playwright-lighthouse": "^4.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   },
   "peerDependencies": {
-    "@playwright/test": "^1.49.0",
-    "playwright": "^1.49.0",
-    "playwright-core": "^1.49.0"
+    "@playwright/test": "^1.49.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.0"
   },
   "scripts": {
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
