--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -11,10 +11,6 @@ jobs:
         with:
           ref: ${{ github.event.release.target_commitish }}
 
-      - name: Validate and extract release information
-        id: release
-        uses: manovotny/github-releases-for-automated-package-publishing-action@v2.0.1
-
       - name: Set node version and build
         uses: actions/setup-node@v4
         with:
@@ -25,6 +21,6 @@ jobs:
       - run: yarn build
 
       - name: Publish version
-        run: yarn npm publish --tag ${{ steps.release.outputs.version }} --access public
+        run: yarn npm publish --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
