--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.53.0",
-    "@types/node": "^24.0.8",
-    "playwright": "^1.53.0",
-    "playwright-core": "^1.53.0"
+    "@types/node": "^24.0.8"
   },
   "scripts": {
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
