--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@axe-core/playwright": "^4.10.0",
     "@eslint/js": "^9.11.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "axe-html-reporter": "^2.2.11",
     "eslint": "^9.11.1",
     "eslint-plugin-playwright": "^2.0.0",
     "get-port": "^7.1.0",
