--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@eslint/js": "^9.11.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "axe-html-reporter": "^2.2.11",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "eslint": "^9.11.1",
     "eslint-plugin-playwright": "^2.0.0",
     "get-port": "^7.1.0",
@@ -42,6 +44,9 @@
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
     "build:package": "yarn build && yarn pack",
     "lint": "yarn eslint ."
+  },
+  "bin": {
+    "delete-nightly-branch": "./bin/delete-nightly-branch.js"
   },
   "packageManager": "yarn@4.9.4"
 }
