Add delete nightly branch script and update get secrets script to run via yarn cli command (#82)
* Add delete nightly branch script and add bin to package.json to allow other repos to run the script directly

* Rename script and update path in package.json

* Move get-secrets into a node script as well and update package.json with bin

* Update version and changelog

* Remove unneeded axios and dotenv dependencies in this repo and add a couple of comments

* Update changelog to make it clear that I am introducing a breaking change

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hmcts/playwright-common",
   "description": "Common library for Playwright tests",
-  "version": "1.0.35",
+  "version": "1.0.36",
   "author": "HMCTS",
   "license": "MIT",
   "repository": {
@@ -42,6 +42,10 @@
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
     "build:package": "yarn build && yarn pack",
     "lint": "yarn eslint ."
+  },
+  "bin": {
+    "delete-nightly-dev-branch": "./dist/scripts/delete-nightly-dev-branch.js",
+    "get-secrets": "./dist/scripts/get-secrets.js"
   },
   "packageManager": "yarn@4.9.4"
 }
