--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "playwright-core": "^1.56.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
+    "@playwright/test": "*",
     "@types/node": "^24.0.8",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/parser": "^8.8.0",
