--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.0.0",
     "lighthouse": "^12.2.1",
     "playwright-lighthouse": "^4.0.0",
+    "ts-morph": "^22.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
     "winston": "^3.13.0"
@@ -51,6 +52,7 @@
     "lint": "yarn eslint .",
     "test": "vitest run"
   },
+  "prepack": "yarn build",
   "bin": {
     "delete-nightly-dev-branch": "./dist/scripts/delete-nightly-dev-branch.js",
     "get-secrets": "./dist/scripts/get-secrets.js"
