EXUI-3784 feat: add retry-after aware resilience and expand docs/recipes

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
     "build:package": "yarn build && yarn pack",
     "lint": "yarn eslint .",
-    "test": "vitest run"
+    "test": "vitest run",
+    "prepack": "yarn build"
   },
   "prepack": "yarn build",
   "bin": {
