--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -21,6 +21,6 @@ jobs:
       - run: yarn build
 
       - name: Publish version
-        run: yarn npm publish --access public
+        run: yarn npm publish --registry https://registry.npmjs.org/ --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
