--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,77 +1,54 @@
 name: Publish Package
+
 on:
+  # Trigger 1: Push code to the 'prerelease' branch
+  push:
+    branches:
+      - prerelease
+  
+  # Trigger 2: Create a formal Release in GitHub UI
   release:
     types: [published]
-  pull_request:
-    types: [labeled]
-    branches:
-      - master
+
+permissions:
+  id-token: write 
+  contents: read
 
 jobs:
   publish:
-    if: >-
-      github.event_name == 'release' ||
-      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'create-prerelease'))
-    
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write      # REQUIRED: For OIDC Trusted Publishing
-      pull-requests: write # REQUIRED: To comment on PRs
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event.release.target_commitish }}
+      - uses: actions/checkout@v4
 
-      - name: Set node version
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: "24.x"
+          node-version: '24.x'
 
-      - name: Ensure npm version
+      - name: Update npm
         run: npm install -g npm@11.5.1
 
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
-      - name: Get version from package.json
-        id: version
-        run: echo "version=$(node -e "import fs from 'fs'; const pkg = JSON.parse(fs.readFileSync('./package.json', 'utf8')); console.log(pkg.version)")" >> "$GITHUB_OUTPUT"
-
-      - name: Configure npm for OIDC
+      # --- CONFIGURATION ---
+      - name: Configure Registry
         run: |
-          # 1. Create the custom config file path
-          NPM_CONFIG_PATH="$RUNNER_TEMP/npmrc-noauth"
+          # 1. Force the @hmcts scope to use the public registry
+          #    (Without this, npm tries to publish to GitHub Packages and fails)
+          npm config set @hmcts:registry=https://registry.npmjs.org
           
-          # 2. IMPORTANT: Persist this path to the GitHub Environment
-          echo "NPM_CONFIG_USERCONFIG=$NPM_CONFIG_PATH" >> "$GITHUB_ENV"
+          # 2. Ensure default registry is public
+          npm config set registry=https://registry.npmjs.org
 
-          # 3. Populate the config file
-          #    Force both generic and @hmcts scope to use public registry
-          printf "registry=https://registry.npmjs.org/\n" > "$NPM_CONFIG_PATH"
-          printf "@hmcts:registry=https://registry.npmjs.org/\n" >> "$NPM_CONFIG_PATH"
-
-          # 4. Clean up any conflicting tokens
-          unset NODE_AUTH_TOKEN
-          npm config delete //registry.npmjs.org/:_authToken || true
-          npm config delete _authToken || true
-
-      # --- SCENARIO A: PRE-RELEASE ---
-      - name: Publish Pre-Release
-        if: github.event_name == 'pull_request'
-        run: npm publish --tag prerelease --access public --provenance
+      # --- SCENARIO A: PRERELEASE BRANCH ---
+      - name: Publish Prerelease
+        # Run only when pushing to the 'prerelease' branch
+        if: github.ref == 'refs/heads/prerelease'
+        # --tag prerelease: Prevents this from being installed as 'latest'
+        run: npm publish --tag prerelease --provenance --access public
 
       # --- SCENARIO B: PRODUCTION RELEASE ---
       - name: Publish Release
+        # Run only when a GitHub Release is published
         if: github.event_name == 'release'
-        run: npm publish --access public --provenance
-
-      - name: Comment PR with published version
-        if: github.event_name == 'pull_request'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "🚀 Pre-release version \`${{ steps.version.outputs.version }}\` has been published"
+        run: npm publish --provenance --access public
