--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,9 +1,12 @@
 name: Publish Package
 
 on:
+  # PRERELEASE: push a tag like "prerelease-<anything>" (e.g. prerelease-6360b77)
   push:
-    branches:
-      - prerelease
+    tags:
+      - "prerelease-*"
+
+  # PRODUCTION: publish via GitHub Release UI
   release:
     types: [published]
 
@@ -23,48 +26,32 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           scope: "@hmcts"
 
-      - name: Update npm
+      - name: Ensure npm version
         run: |
           npm --version
-          npm install -g npm@11.5.1
+          npm i -g npm@11.5.1
           npm --version
 
       - run: yarn install --frozen-lockfile
       - run: yarn build
-
-      - name: Debug (pre-auth)
+      
+      - name: Configure Registry
         run: |
-          echo "event_name=$GITHUB_EVENT_NAME"
-          echo "ref=$GITHUB_REF"
-          echo "sha=$GITHUB_SHA"
-          echo "actor=$GITHUB_ACTOR"
-          echo "--- node/npm ---"
-          node -v
-          npm -v
-          echo "--- npm registry/auth (before cleanup) ---"
-          npm config get userconfig
-          npm config get registry
-          npm config list
+          npm config set @hmcts:registry https://registry.npmjs.org/
+          npm config set registry https://registry.npmjs.org/
 
-      - name: Force OIDC + Debug
+      - name: Force OIDC (no token)
         run: |
           unset NODE_AUTH_TOKEN
           echo "NODE_AUTH_TOKEN=" >> "$GITHUB_ENV"
-
           export NPM_CONFIG_USERCONFIG="$RUNNER_TEMP/npmrc-noauth"
           printf "registry=https://registry.npmjs.org/\n" > "$NPM_CONFIG_USERCONFIG"
           printf "@hmcts:registry=https://registry.npmjs.org/\n" >> "$NPM_CONFIG_USERCONFIG"
-
           npm config delete //registry.npmjs.org/:_authToken || true
           npm config delete _authToken || true
 
-          echo "--- npm registry/auth (after cleanup) ---"
-          npm config get userconfig
-          npm config get registry
-          npm config list
-
-      - name: Publish Prerelease
-        if: github.ref == 'refs/heads/prerelease'
+      - name: Publish Prerelease (tag-triggered)
+        if: startsWith(github.ref, 'refs/tags/prerelease-')
         run: npm publish --tag prerelease --provenance --access public
 
       - name: Publish Release
