--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -9,22 +9,20 @@ on:
     types: [published]
 
 jobs:
-  publish:
+  publish_prerelease:
+    name: Publish prerelease
+    if: startsWith(github.ref, 'refs/tags/prerelease-')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       id-token: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "24.x"
-          registry-url: "https://registry.npmjs.org"
-          scope: "@hmcts"
 
       - name: Ensure npm version (Trusted Publishing)
         run: |
@@ -32,45 +30,49 @@ jobs:
           npm i -g npm@11.5.1
           npm --version
 
-      - name: Install dependencies
-        run: yarn install --immutable
+      - run: yarn install --immutable
+      - run: yarn build
 
-      - name: Build
-        run: yarn build
-
-      - name: Debug package identity (root)
-        run: |
-          node -p "require('./package.json').name"
-          node -p "require('./package.json').version"
-          npm config get registry
-
-      - name: Publish Prerelease (OIDC via npm)
-        if: startsWith(github.ref, 'refs/tags/prerelease-')
-        env:
-          # Defensive: ensure no token-based auth is accidentally present
-          NODE_AUTH_TOKEN: ""
-        run: |
-          # Use a fresh npm user config with no auth token to force OIDC Trusted Publishing.
-          export NPM_CONFIG_USERCONFIG="$RUNNER_TEMP/npmrc-noauth"
-          printf "registry=https://registry.npmjs.org/\n" > "$NPM_CONFIG_USERCONFIG"
-          printf "@hmcts:registry=https://registry.npmjs.org/\n" >> "$NPM_CONFIG_USERCONFIG"
-
-          # Defensive: remove any auth token entries if something tries to inject them.
-          npm config delete //registry.npmjs.org/:_authToken || true
-          npm config delete _authToken || true
-
-          npm publish --tag prerelease --provenance --access public
-
-      - name: Publish Release (OIDC via npm)
-        if: github.event_name == 'release'
-        env:
-          NODE_AUTH_TOKEN: ""
+      - name: Publish (OIDC)
         run: |
           export NPM_CONFIG_USERCONFIG="$RUNNER_TEMP/npmrc-noauth"
           printf "registry=https://registry.npmjs.org/\n" > "$NPM_CONFIG_USERCONFIG"
           printf "@hmcts:registry=https://registry.npmjs.org/\n" >> "$NPM_CONFIG_USERCONFIG"
-
           npm config delete //registry.npmjs.org/:_authToken || true
           npm config delete _authToken || true
 
-          npm publish --provenance --access public
+          npm publish --tag prerelease --access public
+
+  publish_release:
+    name: Publish release
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "24.x"
+
+      - name: Ensure npm version (Trusted Publishing)
+        run: |
+          npm --version
+          npm i -g npm@11.5.1
+          npm --version
+
+      - run: yarn install --immutable
+      - run: yarn build
+
+      - name: Publish (OIDC)
+        run: |
+          export NPM_CONFIG_USERCONFIG="$RUNNER_TEMP/npmrc-noauth"
+          printf "registry=https://registry.npmjs.org/\n" > "$NPM_CONFIG_USERCONFIG"
+          printf "@hmcts:registry=https://registry.npmjs.org/\n" >> "$NPM_CONFIG_USERCONFIG"
+          npm config delete //registry.npmjs.org/:_authToken || true
+          npm config delete _authToken || true
+
+          npm publish --access public
