--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hmcts/playwright-common",
   "description": "Common library for Playwright tests",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "HMCTS",
   "license": "MIT",
   "repository": {
@@ -48,6 +48,7 @@
     "@types/node": "25",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/parser": "8.53.1",
+    "@vitest/coverage-v8": "4.0.17",
     "playwright-core": "^1.57.0",
     "vitest": "4"
   },
