--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   "dependencies": {
     "@axe-core/playwright": "^4.11.0",
     "@eslint/js": "^9.11.1",
-    "@typescript-eslint/eslint-plugin": "8.53.1",
+    "@typescript-eslint/eslint-plugin": "8.54.0",
     "axe-core": "^4.11.1",
     "axe-html-reporter": "^2.2.11",
     "eslint": "^9.11.1",
-    "eslint-plugin-playwright": "^2.0.0",
+    "eslint-plugin-playwright": "^2.5.1",
     "get-port": "^7.1.0",
-    "globals": "17",
+    "globals": "^17.3.0",
     "lighthouse": "13",
     "playwright-lighthouse": "^4.0.0",
     "ts-morph": "27",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.1",
+    "typescript-eslint": "^8.54.0",
     "winston": "^3.19.0"
   },
   "peerDependencies": {
@@ -45,12 +45,12 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
-    "@types/node": "25",
+    "@types/node": "^25.2.0",
     "@types/winston": "^2.4.4",
-    "@typescript-eslint/parser": "8.53.1",
-    "@vitest/coverage-v8": "4.0.17",
+    "@typescript-eslint/parser": "8.54.0",
+    "@vitest/coverage-v8": "4.0.18",
     "playwright-core": "^1.58.0",
-    "vitest": "4"
+    "vitest": "^4.0.8"
   },
   "scripts": {
     "build": "rm -rf dist && yarn tsc -p tsconfig.json",
